--- a/opportunity-portal2/views/index.hbs
+++ b/opportunity-portal2/views/index.hbs
@@ -1,3 +1,4 @@
-<h1>{{title}}</h1>
-
+<h2> Welcome! Check out NCP's current list of STEM opportunities! </h2>
 <img class="backpack" src= "./images/backpack.jpeg" alt="backpack" width="300">
+
+
